Incorporate info button on run component to trigger route modal.

--- a/react-front-end/src/components/Run.css
+++ b/react-front-end/src/components/Run.css
@@ -54,6 +54,10 @@ padding-top:0.2em;
   color: #d83a01c3;
 }
 
+.run-heading .material-symbols-rounded:hover {
+  cursor: pointer;
+}
+
 .run-desc {
   align-items: flex-end;
 }
