--- a/react-front-end/src/components/ShowRunInfo.css
+++ b/react-front-end/src/components/ShowRunInfo.css
@@ -3,12 +3,20 @@
   font-family: "Krub", sans-serif;
 }
 
+.route-modal-header {
+  background-color: #d83a01c3;
+}
+
 .route-modal-header .modal-title {
   font-size: 35px;
-  color: #3e363e;
+  color: white;
   font-weight: 600;
   text-align: center;
   width: 100%;
+}
+
+.route-modal-header .btn-close {
+  color: white;
 }
 
 .route-modal-message {
@@ -37,5 +45,6 @@
 
 #run-path {
   border-radius: 2rem;
-  border: 2px solid #3e363e;
+  /* border: 1px solid #3e363e95; */
+  box-shadow: 0 0 3px #3e363ea8;
 }
