Show event time on run modal

--- a/react-front-end/src/components/Run.css
+++ b/react-front-end/src/components/Run.css
@@ -17,6 +17,9 @@
 
 .run-body {
   padding: 2em;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .run-heading,
