--- a/react-front-end/src/components/Navigation.css
+++ b/react-front-end/src/components/Navigation.css
@@ -1,5 +1,7 @@
 #navigation {
   font-family: "Krub", sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
 .navbar-brand img {
@@ -8,10 +10,11 @@
 }
 
 .nav-link {
-  height: 100%;
+  padding: 1em;
 }
 
 .nav-link:hover {
   background-color: #d83a01c3;
   color: white;
+  transition: all 0.5s;
 }
