--- a/react-front-end/src/components/Run.css
+++ b/react-front-end/src/components/Run.css
@@ -7,6 +7,7 @@
   width: 70rem;
   border: 1px solid rgba(0, 0, 0, 0.125);
   font-family: "Krub", sans-serif;
+  box-shadow: 0 0 5px lightgrey;
 }
 
 .run-image {
@@ -22,11 +23,19 @@
   justify-content: space-between;
 }
 
+.run-body p {
+  margin-top: 0;
+}
+
 .run-heading,
 .run-desc {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+}
+
+.run-desc .list-group-item {
+  padding-left: 0;
 }
 
 .run-heading .run-id {
@@ -47,17 +56,17 @@ padding-top:0.2em;
     margin-right: auto;
 }
 
-.run-heading .material-symbols-rounded{
-  font-size: 30px;
-  font-variation-settings:
-  'FILL' 1,
-  'wght' 400,
-  'GRAD' 0,
-  'opsz' 48;
-  color: #d83a01c3;
+.run-heading .detail-button{
+  background-color: #d83a01c3;
+  color: white;
+  height: 2em;
+  border-radius: 0.375rem;
+  font-size: 15px;
+  font-weight: 500;
+  border: none;
 }
 
-.run-heading .material-symbols-rounded:hover {
+.run-heading .detail-button:hover {
   cursor: pointer;
 }
 
