--- a/react-front-end/src/components/Homepage.css
+++ b/react-front-end/src/components/Homepage.css
@@ -69,3 +69,15 @@
   font-size: 25px;
   max-width: 100%;
 }
+
+.underline {
+  text-underline-offset: 0.2em;
+  text-decoration: underline 1px rgba(0, 0, 0, 0);
+  transition: text-decoration-color 400ms;
+}
+
+.underline:hover {
+  text-underline-offset: 0.2em;
+  text-decoration-color: darkgrey;
+}
+
