Style register run form.

--- a/react-front-end/src/components/RegisterUser.css
+++ b/react-front-end/src/components/RegisterUser.css
@@ -41,6 +41,7 @@
   height: 2.3em;
   border-radius: 0.378rem;
   border: 1px solid rgba(0, 0, 0, 0.175);
+  padding-left: 0.75rem;
 }
 
 .sign-in {
