--- a/react-front-end/src/components/Run.css
+++ b/react-front-end/src/components/Run.css
@@ -20,18 +20,26 @@
   padding: 2em;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: flex-start;
+  gap: 1em;
 }
 
 .run-body p {
-  margin-top: 0;
+  margin: 0;
 }
 
-.run-heading,
+.run-heading {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
 .run-desc {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: start;
+  height: 9em;
 }
 
 .run-desc .list-group-item {
@@ -39,7 +47,6 @@
 }
 
 .run-heading .run-id {
-/* background-color: rgba(0, 0, 0, 0.73); */
 background-color: #d83a01c3;
 color: white;
 font-size: 1.5rem;
@@ -70,10 +77,6 @@ padding-top:0.2em;
   cursor: pointer;
 }
 
-.run-desc {
-  align-items: flex-end;
-}
-
 .join-button {
   height: 3em;
   width: 10em;
@@ -83,6 +86,7 @@ padding-top:0.2em;
   color: white;
   border-radius: 0.375rem;
   font-weight: 800;
+  align-self: flex-end;
 }
 
 .join-button:hover {
