--- a/react-front-end/src/components/Run.css
+++ b/react-front-end/src/components/Run.css
@@ -38,7 +38,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items: start;
+  align-items: flex-start;
   height: 9em;
 }
 
