Move homepage nav links to right and resize

--- a/react-front-end/src/components/Navigation.css
+++ b/react-front-end/src/components/Navigation.css
@@ -5,13 +5,13 @@
 }
 
 .navbar-brand img {
-  width: 2.5em;
-  height: 2.5em;
+  width: 2em;
+  height: 2em;
 
 }
 
 .nav-link {
-  padding: 1em 1.5em;
+  padding: 1em;
 }
 
 .nav-link:hover {
