--- a/react-front-end/src/styles/profile.css
+++ b/react-front-end/src/styles/profile.css
@@ -129,3 +129,30 @@ main {
   color: white;
   font-size: 30px;
 }
+
+
+@media screen and (max-width: 600px) {
+
+  .profile-header {
+   width: 95%;
+   height: 20%;
+   flex-wrap: wrap;
+   font-size: 10px;
+   flex-direction: row;
+  }
+  .profile-pic {
+   height: 100px;
+   width: 100px;
+   margin: 5px;
+  }
+ 
+  .profile-info tbody {
+    font-size: 20px;
+  }
+
+  .profile-info .unit {
+    font-size: 20px;
+  }
+
+ 
+}
