--- a/react-front-end/src/styles/profile.css
+++ b/react-front-end/src/styles/profile.css
@@ -141,10 +141,9 @@ main {
    flex-direction: row;
   }
   .profile-pic {
-    display: none;
-   /* height: 100px;
-   width: 100px;
-   margin: 5px; */
+   height: 150px;
+   width: 150px;
+   margin: 5px;
   }
  
   .profile-info tbody {
@@ -153,6 +152,10 @@ main {
 
   .profile-info .unit {
     font-size: 20px;
+  }
+
+  .profile-info h1 {
+    font-size: 50px;
   }
 
   .profile-stats {
@@ -164,15 +167,19 @@ main {
   .run {
     display: flex;
     flex-direction: column;
-    width: 90%;
-    padding: 0;
+    width: 95%;
+    padding-left: 10px;
   }
 
   .run-image {
-    height: 100px;
-    width: 100px;
-    
+    height: 150px;
+    width: 150px;
+    margin-left: 10%;
+    margin-top: 5%;
+    padding: 0
   }
+
+  
 
  
  
