--- a/react-front-end/src/components/Homepage.css
+++ b/react-front-end/src/components/Homepage.css
@@ -5,6 +5,7 @@
   align-items: center;
   justify-content: space-between;
   flex-direction: row;
+  gap: 2em;
   padding: 2em;
   font-family: "Krub", sans-serif;
   border-top: 1px solid lightgrey;
@@ -28,16 +29,28 @@
   font-size: 20px;
   font-weight: 200;
   text-align: center;
-  max-width: 86%;
+  max-width: 90%;
+}
+
+.logo-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
 }
 
 .logo {
+  width: 100%;
   height: 100%;
-  padding-right: 2em;
+}
+
+.square-logo {
+  display: none;
 }
 
 .home-actions {
-  margin-top: 1em;
+  margin-top: 0.5em;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -52,11 +65,10 @@
   text-decoration: none;
   background-color: #3e363e22;
   width: 15rem;
-  height: 13rem;
   border-radius: 0.375rem;
   border: 1px solid lightgray;
   text-align: center;
-  padding-top: 20px;
+  padding: 10px 0;
   box-shadow: 0 0 2px lightgrey;
   display: flex;
   flex-direction: column;
@@ -84,39 +96,101 @@
   text-decoration-color: darkgrey;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 1280px) {
   .home {
-    height: 100%;
-    flex-direction: column-reverse;
-    gap: 2em;
-    padding-bottom: 3em;
+    gap: 1em;
   }
 
-  .logo {
-    width: 100%;
-    padding-right: 0;
+  .home-intro h2 {
+    font-size: 70px;
   }
-  .home .home-intro h2 {
-    width: 70%;
-  }
-  .home h2 {
-    font-size: 60px;
+
+  .home-intro p {
+    font-size: 1.2rem;
   }
 
   .home-actions {
-    gap: 0.5em;
+    gap: 1em;
     font-size: 40px;
   }
 
   .home-actions a {
-    width: 40vw;
-    height: 20vh;
-    font-weight: 500;
+    width: 13rem;
+    font-weight: 300;
   }
 
   .home-actions a p {
-    margin-top: 0.5em;
-    font-size: 18px;
+    font-size: 1.2rem;
     max-width: 80%;
+  }
+}
+
+@media screen and (max-width: 991px) {
+  .home {
+    height: 100%;
+    flex-direction: column-reverse;
+    padding-bottom: 3em;
+    padding-right: 0;
+    padding-left: 0;
+  }
+
+  .logo-container {
+    width: 25rem;
+  }
+
+  .home-intro h2{
+    width: 80%;
+  }
+
+  .home-intro p {
+    width: 80%;
+  }
+
+  .home-actions {
+    margin-top: 1rem;
+  }
+
+  .home-actions a p {
+    font-size: 1rem;
+    max-width: 80%;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .home {
+    padding-top: 0;
+  }
+
+  .logo {
+    display: none;
+  }
+
+  .logo-container {
+    overflow: hidden;
+    width: 100vw;
+    background-color: #e6795d;
+  }
+  .square-logo {
+    display: block;
+    height: 100%;
+    margin-top: -9.2em;
+    margin-bottom: -3em;
+  }
+
+ .home-intro h2 {
+    font-size: 45px;
+  }
+
+ .home-intro p {
+    font-size: 1rem;
+  }
+
+   .home-actions a {
+    width: 9rem;
+    font-size: 20px;
+  }
+
+  .home-actions a p {
+    font-size: 0.9rem;
   }
 }
