--- a/react-front-end/src/styles/profile.css
+++ b/react-front-end/src/styles/profile.css
@@ -123,11 +123,17 @@ main {
   text-align: center;
 }
 
-.empty-runs-container .empty-runs-button {
+.empty-runs-container .btn {
   width: 20rem;
   height: 7rem;
   color: white;
   font-size: 30px;
+  align-self: center;
+  border-radius: 0.5rem;
+}
+
+.empty-runs-container .btn:hover {
+  border: 0.5px solid #3e363e;
 }
 
 
