--- a/react-front-end/src/App.css
+++ b/react-front-end/src/App.css
@@ -1,33 +1,21 @@
 .App {
   text-align: center;
+  background-color: rgb(190, 90, 90);
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.nav {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background-color: rgb(160, 40, 40);
+  height: 100px;
+  width: 100vw;
+  border: 3px solid black
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.nav ul.nav_links {
+  display: flex;
+  width: 80vw;
+  flex-direction: row;
+  margin-left: auto;
+  margin-right: auto;
+  justify-content: space-between;
 }
