--- a/react-front-end/src/App.css
+++ b/react-front-end/src/App.css
@@ -11,11 +11,112 @@
   border: 3px solid black
 }
 
-.nav ul.nav_links {
+.nav div.nav_links {
   display: flex;
-  width: 80vw;
+  width: 90vw;
   flex-direction: row;
   margin-left: auto;
   margin-right: auto;
   justify-content: space-between;
+  align-items: center;
+}
+
+.nav_btns {
+  display: flex;
+  flex-direction: row;
+  margin-left: 5em;
+}
+
+.nav_loggedin {
+  display: flex;
+  font-size: 24px;
+  margin-right: 2em;
+}
+
+div.user_nav {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.user_nav img {
+  display: flex;
+  height: 50px;
+  margin-right: 1em;
+}
+
+.nav_new {
+  display: flex;
+  border: 2px solid black;
+  border-radius: 0.5em;
+  font-size: 24px;
+  padding: 0.5em;
+  background-color: rgb(100,0,0);
+  margin-left: 2em;
+}
+
+.nav_home {
+  display: flex;
+  border: 2px solid black;
+  border-radius: 0.5em;
+  font-size: 24px;
+  padding: 0.5em;
+  background-color: rgb(100,0,0);
+}
+
+.nav_acc {
+  display: flex;
+  border: 2px solid black;
+  border-radius: 0.5em;
+  font-size: 24px;
+  padding: 0.5em;
+  background-color: rgb(100,0,0);
+}
+
+
+
+.main_page {
+  display: flex;
+  height: 85vh;
+  background-color: rgb(190, 90, 90);
+}
+
+.canvas_section {
+  display: flex;
+  min-width: 1500px;
+  min-height: 700px;
+  height: auto;
+  width: auto;
+  border: 2px solid black;
+  background-color: white;
+  margin: 25px;
+  align-items: center;
+  justify-content: center;
+}
+
+.save_edit_btns {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+
+.save_edit_btns button{
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  font-size: 24px;
+  margin-bottom: 1em;
+  border: 2px solid black;
+  border-radius: 0.5em;
+  align-items: center;
+  padding: 0.5em 1em 0.5em 1em;
+  background-color: rgb(100,0,0);
+  color: rgb(210,210,210);
+}
+
+.sidebar {
+  display: flex;
+  width: 200px;
+  border: 3px solid black;
+  border-top: none;
 }
