fix margins/ add handleclick for progress

--- a/react-front-end/src/pages/Exercise.css
+++ b/react-front-end/src/pages/Exercise.css
@@ -3,8 +3,9 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
-    color: black;
+    color: red;
     border-radius: 17px;
     border: 2px black solid;
     margin: 15px;
+    margin-left: 240px;
   }
