--- a/react-front-end/src/pages/styles/home.css
+++ b/react-front-end/src/pages/styles/home.css
@@ -36,10 +36,24 @@ div.examples {
   display: flex;
   flex-direction: row;
 }
+
 div.examples div{
   display: flex;
   height: 200px;
   width: 300px;
-  border: 1px solid black;
+  border: 3px solid black;
+  background-color: white;
   margin: 2em;
+  justify-content: center;
+}
+
+div.examples img{
+  display: flex;
+  height: 200px;
+  width: 300px;
+}
+
+div.examples label{
+  display: flex;
+  position: absolute;
 }
