fix/circular-profile-pictures

--- a/react-front-end/src/pages/styles/account.css
+++ b/react-front-end/src/pages/styles/account.css
@@ -25,6 +25,8 @@ section.user {
 section.user img {
   display: flex;
   height: 400px;
+  border-radius: 20em;
+  border: 3px solid black;
 }
 
 .user_info {
