--- a/react-front-end/src/pages/styles/toolbar.css
+++ b/react-front-end/src/pages/styles/toolbar.css
@@ -9,6 +9,8 @@
   flex-direction: column;
   align-items: center;
   margin-top: 1em;
+  font-size: 18px;
+  font-family: 'Caveat';
 }
 
 .tools div{
@@ -29,6 +31,8 @@
   width: 150px;
   flex-direction: row;
   justify-content: space-between;
+  font-size: 18px;
+  font-family: 'Caveat';
 }
 
 .tool_buttons {
@@ -43,6 +47,8 @@
   width: 180px;
   justify-content: center;
   margin: 0.5em 0 0.5em 0;
+  font-size: 18px;
+  font-family: 'Caveat';
 }
 
 .brush_option {
@@ -51,6 +57,8 @@
   width: 200px;
   align-items: center;
   margin: 2em 0 2em 0;
+  font-size: 24px;
+  font-family: 'Caveat';
 }
 
 #size-slider {
