--- a/react-front-end/src/components/MoviesListRow.css
+++ b/react-front-end/src/components/MoviesListRow.css
@@ -16,11 +16,17 @@
 
 .movie_poster {
   object-fit: contain;
-  width: 100%;
-  height: 150px;
-  margin-right: 20px;
-  transition: transform 450ms;
-  border-radius: 0.5vw;
+  display: inline-block;
+  transition: transform 0.2s;
+  position: relative;
+  border-radius: 1vw;
+  overflow: hidden;
+  margin-right: 25px;
+  cursor: pointer;
+  min-width: 100px;
+  height: 200px;
+  z-index: 0;
+  border: 1px solid rgb(99, 99, 99);
 }
 
 .movie_poster:hover {
