--- a/react-front-end/src/components/GenrePage.css
+++ b/react-front-end/src/components/GenrePage.css
@@ -1,10 +1,10 @@
 .movies_row_grid {
-  margin-left: 20px;
+  padding-left: 20px;
   font-weight: bold;
   font-size: 1.2rem;
   margin-bottom: 5x;
-  /* color: white;
-  background: black; */
+  color: white;
+  background: #141414;
 }
 
 .movies_row_posters_grid {
