--- a/react-front-end/src/components/MovieDetails.css
+++ b/react-front-end/src/components/MovieDetails.css
@@ -87,6 +87,7 @@
   outline: none;
   padding: 0.5rem 2rem;
   background-color: #aba7a7b4;
+  color: white;
 }
 
 .movie__button:hover {
@@ -103,4 +104,7 @@
   color: white;
   object-fit: contain;
   bottom: 100px;
+}
+.icon {
+  margin-right: 0.5rem;
 }
