--- a/react-front-end/src/components/GenrePage.css
+++ b/react-front-end/src/components/GenrePage.css
@@ -20,20 +20,49 @@
   object-fit: contain;
   width: 100%;
   height: 150px;
-  margin-right: 20px;
+  /* margin-right: 20px; */
   transition: transform 450ms;
   border-radius: 1vw;
 }
 
-.movie_poster_grid:hover {
+/* .movie_poster_grid:hover {
   cursor: pointer;
   transform: scale(1.1);
-}
+} */
 
 .movie_poster_grid:hover .overlay {
   opacity: 1;
 }
-
+.movie_card_grid {
+  object-fit: contain;
+  display: inline-block;
+  transition: transform 0.2s;
+  position: relative;
+  border-radius: 1vw;
+  /* overflow: hidden; */
+  /* margin-right: 25px; */
+  cursor: pointer;
+  /* min-width: 135px; */
+  /* height: 200px; */
+  z-index: 0;
+  /* border: 1px solid rgb(99, 99, 99); */
+}
+.movie_card_overlay:hover {
+  opacity: 1;
+}
+.movie_card_overlay {
+  position: absolute;
+  /* padding: 0 1rem 2rem 1rem; */
+  bottom: 0px;
+  height: 150px;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  justify-content: flex-end;
+  background-image: linear-gradient(rgb(0, 0, 0, 0), rgb(0, 0, 0, 1));
+  opacity: 0;
+  transition: opacity 0.2s;
+}
 .overlay {
   position: absolute;
   background: rgba(0, 0, 0, 0.8);
@@ -44,4 +73,43 @@
   font-size: 20px;
   padding: 20px;
   text-align: center;
+}
+
+
+.movie_card_title {
+  font-weight: 900;
+  font-size: 1rem;
+  margin-bottom: 0.4rem;
+}
+
+.movie_card_runtime {
+  font-size: 0.75rem;
+  margin-bottom: 0.25rem;
+}
+
+.movie_card_rating {
+  float: right;
+}
+
+.movie_card_description {
+  font-style: italic;
+  font-size: 0.75rem;
+  margin-bottom: 0.25rem;
+}
+
+.vote_star {
+  color: gold;
+  margin-left: 2px;
+}
+
+.heart {
+  color: red;
+  margin-left: 5px;
+  margin-top: 5px;
+}
+.remove_icon {
+  margin-left: 5px;
+}
+.overlay_watchlist {
+  font-size: 1rem;
 }
