--- a/react-front-end/src/components/MovieDetails.css
+++ b/react-front-end/src/components/MovieDetails.css
@@ -1,15 +1,17 @@
 .movie {
   width: 100%;
-  position: relative;
+  position: absolute;
   display: flex;
   flex-direction: column;
   align-items: center;
   background-color: #141414;
   font-size: 1.5rem;
 }
+
 .movie__intro {
   width: 100%;
 }
+
 .movie__backdrop {
   width: 100%;
   height: 400px;
@@ -22,7 +24,9 @@
   width: 80%;
   display: flex;
   position: relative;
-  bottom: 230px;
+  /* bottom: 230px; */
+  /* bottom: 150px; */
+
 }
 
 .movie__detailLeft {
@@ -43,7 +47,7 @@
   justify-content: space-between;
 }
 
-.movie__detailRightTop > div {
+.movie__detailRightTop>div {
   text-shadow: 0px 0px 5px #000000;
   margin-bottom: 0.5rem;
 }
@@ -95,16 +99,24 @@
   color: #000;
   transition: all 0.2s;
 }
+
 .movie__voteCount {
   margin-left: 10px;
 }
+
 .movie__recommendations {
   width: 100%;
   position: relative;
   color: white;
   object-fit: contain;
-  bottom: 100px;
+  margin-top: 50px;
 }
+
 .icon {
   margin-left: 0.5rem;
+}
+
+.youtube-component {
+  margin-bottom: 50px;
+  margin-top: 100px;
 }
