--- a/react-front-end/src/App.css
+++ b/react-front-end/src/App.css
@@ -1,6 +1,9 @@
-.App{
+.App {
   background: #141414;
   color: white;
   margin: 0;
   padding: 0;
+  position: relative;
+  top: 0;
+  bottom: 0;
 }
