--- a/react-front-end/src/components/Navbar.css
+++ b/react-front-end/src/components/Navbar.css
@@ -30,7 +30,7 @@
   left: 10px;
   font-size: 2rem;
   text-decoration: none;
-  color: white;
+  color: gold;
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
   font-weight: 900;
 }
