--- a/react-front-end/src/style/quiz.css
+++ b/react-front-end/src/style/quiz.css
@@ -8,10 +8,47 @@
 }
 
 .game {
-  width: 300px; /* Set the width as needed */
-  height: 400px; /* Set the height as needed */
+  width: 500px; /* Set the width as needed */
+  height: 750px; /* Set the height as needed */
   background-color: white;
   border: 2px solid black;
-  padding: 20px; /* Add padding as needed */
+  padding: 5px;
   box-sizing: border-box; /* Include padding and border in the total width and height */
 }
+
+.logo {
+  width: 400px;
+}
+
+.round {
+  font-size: 30px;
+}
+
+.questions {
+  font-size: 40px;
+}
+
+.answers {
+  font-size: 30px;
+}
+
+.buttons {
+  font-size: 30px;
+}
+
+.lives {
+  font-size: 30px;
+}
+
+.score {
+  font-size: 30px;
+}
+
+.hint {
+  font-size: 20px;
+}
+
+.h-button {
+  font-size: 30px;
+}
+
