skip,fiftyfifty,switch

--- a/react-front-end/src/style/quiz.css
+++ b/react-front-end/src/style/quiz.css
@@ -52,6 +52,18 @@
   font-size: 30px;
 }
 
+.s-button {
+  font-size: 30px;
+}
+
+.fifty-fifty-button {
+  font-size: 30px;
+}
+
+.switch-button {
+  font-size: 30px;
+}
+
 .dude {
   width: 200px;
   
