--- a/react-front-end/src/style/congrads.css
+++ b/react-front-end/src/style/congrads.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
-  height: 100vh;
+  height: 100%;
   background: linear-gradient(to right, #75088E, #610576);
 }
 
