--- a/react-front-end/src/style/quiz.css
+++ b/react-front-end/src/style/quiz.css
@@ -5,18 +5,21 @@
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
-  height: 100vh;
+  height: 100%;
   background: linear-gradient(to right, #9c0fbb, #770890);
 }
 
 .game {
-  width: 500px;
-  height: 750px;
+  width: 50%;
+  height: 80%;
   background-color: white;
   border: 2px solid black;
   padding: 5px;
   box-sizing: border-box;
 }
+
+
+
 
 .logo {
   width: 400px;
@@ -36,7 +39,16 @@
 
 .buttons {
   font-size: 30px;
+  border: 3px black solid; 
+  margin-bottom: 0.5em;
+  background-color: yellow;
 }
+
+.buttons:hover {
+  border: 2px yellow solid;
+  background-color: yellow;
+}
+
 
 .lives {
   font-size: 30px;
@@ -79,4 +91,9 @@
 .dude3 {
   width: 170px;
   
+}
+
+.timer {
+  color: red;
+  font-size: 40px;
 }
