--- a/react-front-end/src/style/instruction.css
+++ b/react-front-end/src/style/instruction.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
-  height: 100%;
+  height: 100vh;
 }
 
 .center-top {
@@ -41,7 +41,7 @@ bottom: 90px;
 
 .div-style {
   background: linear-gradient(to right, #9c0fbb, #770890);
-  height: 100%;
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
