moved image over and added question counter

--- a/react-front-end/src/style/App.css
+++ b/react-front-end/src/style/App.css
@@ -19,7 +19,7 @@
   background-color: #ffff00;
   color: #000000;
   border: 8px solid #000000;
-  border-radius: 5px; /* Add rounded corners */
+  border-radius: 5px;
   width: 800px;
   padding: 40px;
   font-family: "YourFontFamily", sans-serif;
