--- a/react-front-end/src/style/quiz.css
+++ b/react-front-end/src/style/quiz.css
@@ -1,4 +1,6 @@
-
+img {
+  padding-right: 500px;
+}
 
 .container {
   display: flex;
@@ -21,6 +23,7 @@
 
 .logo {
   width: 400px;
+
 }
 
 .round {
@@ -46,6 +49,7 @@
   list-style: none;
   padding: 0;
   margin: 0;
+
 }
 
 .buttons {
