--- a/react-front-end/src/style/quiz.css
+++ b/react-front-end/src/style/quiz.css
@@ -1,5 +1,5 @@
 img {
-  padding-right: 500px;
+
 }
 
 .container {
@@ -70,7 +70,7 @@ img {
   font-size: 30px;
 }
 
-.score {
+.your-score {
   font-size: 30px;
 }
 
