--- a/react-front-end/src/style/App.css
+++ b/react-front-end/src/style/App.css
@@ -9,5 +9,12 @@ justify-content: center;
 }
 
 .logo {
-  padding-left: 60px;
+  display: flex;
+margin-right: 300px;
+width: 350px;
+height: 350px;
+}
+
+.quiz {
+height: 200px;
 }
