--- a/react-front-end/src/style/congrads.css
+++ b/react-front-end/src/style/congrads.css
@@ -9,14 +9,25 @@
 
 .title {
 font-size: 100px;
+display: flex;
+justify-content: center;
+}
+
+.final-score {
+  display: flex;
+justify-content: center;
 }
 
 .on {
   font-size: 50px;
+  display: flex;
+  justify-content: center;
 }
 
 .completing {
   font-size: 50px;
+  display: flex;
+  justify-content: center;
 }
 
 .myForm {
@@ -31,7 +42,7 @@ font-size: 100px;
 }
 
 .myForm button {
-  width: 100%;
+  width: 92%;
   padding: 10px;
   font-size: 16px;
   font-weight: bold;
@@ -48,4 +59,8 @@ font-size: 100px;
 .name {
   font-size: 25px;
   font-weight: bold;
+}
+
+.text {
+  width: 20px;
 }
