--- a/react-front-end/src/style/App.css
+++ b/react-front-end/src/style/App.css
@@ -2,4 +2,5 @@ div-style {
   background: linear-gradient(to right, #9c0fbb, #770890);
   display: flex;
   justify-content: center;
+  height: 100%;
 }
