--- a/react-front-end/src/style/instruction.css
+++ b/react-front-end/src/style/instruction.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
-  height: 100vh;
+  height: 100%;
 }
 
 /*.center-top {
@@ -42,7 +42,7 @@
 
 .div-style {
   background: linear-gradient(to right, #9c0fbb, #770890);
-  height: 100vh;
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
