--- a/react-front-end/src/style/congrads.css
+++ b/react-front-end/src/style/congrads.css
@@ -39,6 +39,7 @@ font-size: 100px;
   color: black;
   border: none;
   border-radius: 4px;
+  font-family: "Pixelify Sans", sans-serif;
 }
 
 .myForm button:hover {
