change font in congrads page

--- a/react-front-end/src/style/congrads.css
+++ b/react-front-end/src/style/congrads.css
@@ -5,6 +5,7 @@
   justify-content: flex-start;
   height: 100vh;
   background: linear-gradient(to right, #75088E, #610576);
+  font-family: 'Playpen Sans', cursive;
 }
 
 .title {
