--- a/react-front-end/src/style/home.css
+++ b/react-front-end/src/style/home.css
@@ -1,4 +1,17 @@
-.rectangle-button {
+.start-button {
+  width: 300px;
+  height: 100px;
+  background-color: #ffff00;
+  color: #000000;
+  border: 8px solid #000000;
+  border-radius: 5px;
+  font-size: 30px;
+  font-family: "Pixelify Sans", sans-serif;
+  margin: 10px;
+  cursor: pointer;
+}
+
+.info-button {
   width: 300px;
   height: 100px;
   background-color: #ffff00;
@@ -21,7 +34,9 @@
   border: 8px solid #000000;
   border-radius: 5px;
   width: 800px;
-  padding: 40px;
+  padding-bottom: 20px;
+  padding-left: 110px;
+  padding-right: 110px;
   font-size: 18px;
   text-align: center;
 }
@@ -50,7 +65,8 @@
 
 .start {
   display: flex;
-  /* padding-left: 490px; */
+justify-content: center;
+margin-right: 240px;
 }
 
 .dude {
@@ -89,13 +105,13 @@
   flex-direction: column;
   flex-wrap: wrap;
   max-height: 350px;
-  margin-left: -2em;
+  margin-left: -5em;
 }
 
 .score-row {
   width: 180px;
   display: flex;
-  margin-right: 2.5em;
+  margin-right: 4.5em;
 }
 
 .list { 
