--- a/react-front-end/src/style/index.css
+++ b/react-front-end/src/style/index.css
@@ -6,6 +6,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: linear-gradient(to right, #9c0fbb, #770890);
 }
 
 code {
